--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.2.0",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -53,6 +53,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   }
 }
